--- a/getting-started/prerequisites-installation/system-requirements.mdx
+++ b/getting-started/prerequisites-installation/system-requirements.mdx
@@ -1,134 +1,159 @@
 ---
 title: "System Requirements"
-description: "Outlines the supported platforms, compilers, and minimum C++ standard required for GoogleTest. Gives users confidence that their development environment is compatible and helps avoid compatibility surprises."
+description: "Outlines the minimum system requirements to use GoogleTest and GoogleMock, including supported operating systems, compilers, and the necessity for C++17 or later. Guides users in verifying whether their development environment meets these foundational needs before proceeding."
 ---
 
-# System Requirements for GoogleTest
+# System Requirements for GoogleTest and GoogleMock
 
-GoogleTest is a powerful, portable C++ testing framework designed to work across a variety of development platforms. This page outlines the supported operating systems, compiler versions, and C++ language standards you need to successfully build and run GoogleTest in your environment. Ensuring your system meets these requirements will help you avoid compatibility surprises and get started efficiently.
-
----
-
-## Supported Platforms
-
-GoogleTest has been tested and verified on the following operating systems:
-
-- **Linux** (various distributions)
-- **Windows** (including Windows 10 and Windows Server editions)
-- **macOS** (modern supported versions)
-
-The framework is designed for broad portability and should work on any standard-compliant platform that supports a modern C++ compiler.
-
-## Supported Compilers
-
-To build and use GoogleTest, your C++ compiler must meet the minimum feature and version requirements:
-
-- **GCC** (GNU Compiler Collection): Version 7.0.0 or newer is recommended to ensure compliant C++17 support and avoid warnings/errors.
-- **Clang**: Fully supported; versions compatible with C++17.
-- **MSVC (Microsoft Visual C++)**: Minimum required version is Visual Studio 2015 (compiler version 14.0). Early versions such as MSVC 2013 or earlier will not compile GoogleTest.
-- **Intel compilers** and other major compilers that support C++17 should work, provided they meet or exceed the minimum C++17 standard.
-
-
-<Check>
-Note: If you are using MSVC earlier than 2015, the build will fail with an error indicating the minimum version requirement.
-</Check>
-
-## Required C++ Standard Version
-
-GoogleTest requires at least the **C++17** standard to be supported and enabled in your build environment. This is due to the use of modern C++ features for robustness and portability.
-
-**How to ensure C++17 is enabled:**
-
-- When using **CMake**, add the following lines to your top-level `CMakeLists.txt`:
-
-  ```cmake
-  set(CMAKE_CXX_STANDARD 17)
-  set(CMAKE_CXX_STANDARD_REQUIRED ON)
-  ```
-
-- If you cannot use CMake or have a C project, pass the equivalent flags directly to the compiler, for example:
-
-  - For GCC and Clang:
-    ```bash
-    -std=c++17
-    ```
-
-  - For MSVC, use `/std:c++17` or ensure your Visual Studio project is configured to use the C++17 standard.
-
-## Additional Tooling and Requirements
-
-- **Build System:** GoogleTest supports building with [CMake](https://cmake.org/) and is compatible with many build environments.
-
-- **Threading:** GoogleTest is thread-safe on platforms with pthread support. When pthread is available, relevant compiler and linker flags must be added (usually handled automatically by CMake).
-
-- **Runtime:** On Windows, it’s recommended to configure the runtime linking correctly (see Visual Studio dynamic vs static runtimes in the CMake build docs) to avoid linker errors.
-
-
-## Summary Table
-
-| Requirement                    | Details                                               |
-|-------------------------------|-------------------------------------------------------|
-| Operating Systems Supported    | Linux, Windows, macOS                                 |
-| Minimum Compiler Versions      | GCC >=7.0, Clang (latest), MSVC >= 2015 (v14.0)       |
-| C++ Language Standard          | C++17 minimum, required                               |
-| Build Tools                   | CMake 3.13 or later recommended                        |
-| Threading                     | Requires pthread support for thread safety on Linux/macOS |
+This page outlines the fundamental system requirements necessary to build and use GoogleTest and GoogleMock successfully. Before proceeding with installation and configuration, ensure your development environment meets the following conditions.
 
 ---
 
-## Troubleshooting Compatibility Issues
+## 1. Supported Operating Systems
 
-- **Compiler Version Errors:** If your build fails with errors about unsupported compiler versions, verify your compiler version and update if necessary.
+GoogleTest and GoogleMock are designed to be cross-platform and officially support the following operating systems:
 
-- **C++17 Support Missing:** Ensure that your build flags explicitly specify C++17 or later.
+- **Linux** (including various distributions)
+- **Windows** (Desktop editions, with Visual Studio support)
+- **macOS** (including integration with Xcode)
 
-- **MSVC Linker Errors:** On Windows, enable `gtest_force_shared_crt` in CMake to match runtime library linkage.
-
-- **Pthread Flags:** If you receive errors related to pthread symbols on Linux/macOS, verify your linker flags include `-lpthread`. Using CMake should handle this automatically.
-
-
-For detailed installation instructions and build configuration examples, please visit the [Installation with CMake guide](/getting-started/prerequisites-installation/install-via-cmake).
-
-To verify your environment is compatible, see the [Validating Your Setup](/getting-started/troubleshooting-validation/validate-setup) documentation.
-
+These platforms are actively maintained and tested to ensure compatibility and stable operation.
 
 ---
 
-## Further Reading and References
+## 2. Compiler Requirements
 
-- [GoogleTest Primer](../../docs/primer.md): Learn how to write tests once your environment is set up.
-- [GoogleMock README](../../googlemock/README.md): If using mocking capabilities along with GoogleTest.
-- [Build system integration](../../guides/integration-and-optimization/build-system-integration.md): For details on integrating GoogleTest into your projects.
+To build GoogleTest and GoogleMock, your compiler must support C++17 or later standards. The following compilers and versions are recognized as suitable:
 
+- GCC with support for C++17
+- Clang with C++17 support
+- Microsoft Visual Studio 2017 Update 3 (MSVC 19.11) or newer
 
-<Note>
-This page focuses specifically on the foundational system requirements that ensure GoogleTest builds and runs reliably. For configuration steps or troubleshooting, consult the related getting started and troubleshooting documentation.
-</Note>
+Make sure your compiler is configured to use at least C++17. This can be enforced in CMake or your build system by specifying the C++ standard explicitly, for example:
 
-
----
-
-## Summary Diagram: Compatibility Overview
-
-```mermaid
-flowchart TD
-  OS["Supported Operating Systems"]
-  Compiler["Supported Compilers"]
-  Std["C++17 Standard Requirement"]
-
-  OS --> Compatible["Compatible Environment"]
-  Compiler --> Compatible
-  Std --> Compatible
-
-  Compatible --> Build["GoogleTest Build Success"]
-  Build --> Test["Run Tests"]
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 ```
 
+If your project does not use CMake or you want to pass compiler flags directly, you can add:
+
+```bash
+-DCMAKE_CXX_FLAGS="-std=c++17"
+```
+
+Ensure your build environment respects these requirements to avoid compilation errors.
 
 ---
 
-*Last Updated: Based on GoogleTest Version 1.17.0 and above.*
+## 3. Threading and Libraries
+
+GoogleTest is thread-safe on platforms where the `pthread` library is available and supported.
+
+- On **Unix-like systems** (Linux, macOS), pthread support is assumed and enabled.
+- On **Windows**, native threading primitives are used.
+
+If your environment fails to detect pthread support automatically, you can manually enable or disable it by passing the following compiler flags:
+
+```bash
+-DGTEST_HAS_PTHREAD=1    # to enable
+-DGTEST_HAS_PTHREAD=0    # to disable
+```
+
+When using your own build scripts, remember to link against pthread (`-pthread`) and add any necessary compiler flags for threading support.
 
 ---
 
-<Source url="https://github.com/google/googletest" paths={[{"path": "googletest/README.md", "range": "1-200"},{"path": "googletest/cmake/internal_utils.cmake", "range": "1-150"},{"path": "googlemock/include/gmock/internal/gmock-port.h", "range": "20-90"}]} />
+## 4. Minimum C++ Language Standard
+
+GoogleTest mandates the use of C++17 features. If your compiler or environment uses an older standard, GoogleTest will not compile. Since this is enforced inside `gtest-port.h`, attempting to compile with C++14 or earlier will result in an error similar to:
+
+```
+#error C++ versions less than C++17 are not supported.
+```
+
+To fix this, explicitly set C++17 or newer standard support.
+
+---
+
+## 5. Build Tooling
+
+To build GoogleTest and GoogleMock efficiently, the following tooling is recommended:
+
+- **CMake (version 3.14 or newer)**: The primary build system used by GoogleTest.
+- For Windows, having **Visual Studio** installed enables building via `.sln` files generated by CMake.
+- On macOS, having **Xcode** installed enables building via `.xcodeproj` files generated by CMake.
+
+If you prefer other build tools or package managers, ensure they support linking to C++17 projects and integration with pthread (or equivalent threading).
+
+---
+
+## 6. Additional Notes
+
+- **Dynamic vs Static Runtimes on Windows:**
+  Visual Studio by default links C runtimes dynamically, but GoogleTest links statically. This may cause linker errors such as
+  `error LNK2038: mismatch detected for 'RuntimeLibrary'`.
+
+  You can fix this by enabling the CMake option `gtest_force_shared_crt` which will link GoogleTest's runtimes dynamically:
+
+  ```bash
+  cmake .. -Dgtest_force_shared_crt=ON
+  ```
+
+- **Optional Macros for Tweaking:**
+  GoogleTest can be customized via compiler flags starting with `-DGTEST_`, for example, to control thread-safety, macro name clashes, or shared library usage.
+
+
+---
+
+## Quick Verification Checklist Before Installation
+
+1. Confirm your OS is Linux, Windows, or macOS.
+2. Verify your compiler supports C++17.
+3. Check that pthread is available or appropriately configured.
+4. Confirm CMake (≥3.14) is installed if using CMake builds.
+5. On Windows, have Visual Studio ready for generated solution files.
+
+
+## Troubleshooting Tips
+
+- **C++17 Support Error:**
+  Ensure your build system or compiler flags indicate `-std=c++17` or equivalent.
+
+- **Threading Link Errors:**
+  If link errors about pthread occur, confirm your linker flags include `-pthread` on Unix-like systems.
+
+- **Visual Studio Runtime Mismatch:**
+  Use `gtest_force_shared_crt` to align runtime linkage.
+
+- **Unsupported OS or Compiler:**
+  Check the [Supported Platforms](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md) for compatible versions.
+
+
+---
+
+## Where to Go Next
+
+After confirming these system requirements, proceed with:
+
+- [Installation on Linux/macOS](../prerequisites-installation/installing-on-linux-macos)
+- [Installation on Windows](../prerequisites-installation/installing-on-windows)
+- [Using Alternative Build Systems](../prerequisites-installation/alternative-build-systems)
+
+For further understanding of why these requirements matter, see the [Supported Platforms](../../docs/platforms.md) guide.
+
+
+---
+
+### References
+
+- [GoogleTest GitHub: Generic Build Instructions](https://github.com/google/googletest/blob/main/googletest/README.md)
+- [GoogleTest Primer: Basic Concepts](../primer.md)
+- [Supported Platforms Matrix](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md)
+- [Build with CMake](https://cmake.org/)
+
+---
+
+*This page is part of the Getting Started sequence.*
+
+---
