--- a/guides/getting-started/installing-and-setting-up.mdx
+++ b/guides/getting-started/installing-and-setting-up.mdx
@@ -1,188 +1,198 @@
 ---
 title: "Installing and Setting Up GoogleTest & GoogleMock"
-description: "A guided walkthrough of installing GoogleTest and GoogleMock, configuring your project, and integrating with common build systems. This page explains the recommended setup flow and provides actionable steps tailored to CMake and Bazel users."
+description: "Learn how to install and configure GoogleTest and GoogleMock in your C++ development environment. This guide covers acquisition, integration with common build systems like CMake and Bazel, and basic verification of your setup."
 ---
 
 # Installing and Setting Up GoogleTest & GoogleMock
 
-A step-by-step walkthrough to install, configure, and integrate GoogleTest and GoogleMock into your C++ project. This guide focuses on practical setup instructions tailored to the most common build systems: CMake and Bazel.
+Welcome to the essential guide for installing and configuring GoogleTest and GoogleMock in your C++ development environment. This guide walks you through acquiring the libraries, integrating them with popular build systems like CMake and Bazel, and verifying that your setup is ready for writing robust unit and mock tests.
 
 ---
 
-## Workflow Overview
+## 1. What You Will Achieve
 
-### What You Will Achieve
+- Install GoogleTest and GoogleMock libraries correctly in your local environment.
+- Integrate GoogleTest and GoogleMock into your C++ projects using CMake or Bazel.
+- Verify the installation with a simple test execution.
 
-By following this guide, you will successfully:
-
-- Install GoogleTest and GoogleMock, including their source or prebuilt libraries.
-- Configure and build them as standalone components or integrated parts of your project.
-- Use common CMake and Bazel approaches to seamlessly link GoogleTest/GoogleMock into your build.
-- Understand how to leverage the provided `main()` entry points and customize your test harness if needed.
-
-### Prerequisites
-
-Before starting, ensure you have:
-
-- A working C++17 compatible compiler (e.g., GCC, Clang, MSVC).
-- Installed CMake (version 3.14 or newer) and/or Bazel build tool configured.
-- Network access if you need to clone the repositories or download sources.
-- Familiarity with your project's build system (CMake or Bazel).
-
-### Estimated Time
-
-About 15–30 minutes, depending on your environment and build system familiarity.
-
-### Difficulty Level
-
-Beginner to Intermediate — assuming basic knowledge of C++ project builds.
+This guide assumes you want a solid baseline installation and setup for immediate testing productivity.
 
 ---
 
-## Step-by-Step Instructions
+## 2. Prerequisites
 
-### 1. Clone the GoogleTest Repository
+Before beginning, ensure you have:
 
-Start by cloning the official repository from GitHub:
+- A C++17 capable compiler installed.
+- CMake version 3.14 or higher for CMake-based builds.
+- Git (optional, for cloning the repository).
+- Access to internet to clone repositories or download releases.
+- Your preferred build system setup if using Bazel or alternative.
 
-```bash
-git clone https://github.com/google/googletest.git -b main
-cd googletest
-```
-
-This repository includes both GoogleTest and GoogleMock sources.
 
 ---
 
-### 2. Building with CMake
+## 3. Installing GoogleTest and GoogleMock
 
-#### Standalone Build
+GoogleMock is bundled as part of GoogleTest's repository since version 1.7.0. When you acquire the GoogleTest source, GoogleMock is included by default.
 
-Create a dedicated build directory and configure the build:
+### 3.1 Acquire the Source
 
-```bash
-mkdir build
-cd build
-// Default build includes GoogleMock
-cmake ..
-```
-
-To build _only_ GoogleTest (excluding GoogleMock), run:
+Clone the release branch or download a stable zip archive from GitHub:
 
 ```bash
-cmake .. -DBUILD_GMOCK=OFF
+# Clone the repository
+$ git clone https://github.com/google/googletest.git -b v1.17.0
+$ cd googletest
 ```
 
-Then compile the project:
+### 3.2 Build Using CMake
 
-```bash
-make
-```
+GoogleTest and GoogleMock support standalone as well as integrated builds with your existing projects.
 
-On Windows, open the generated `gtest.sln` in Visual Studio, or on macOS open the `.xcodeproj`.
+#### 3.2.1 Standalone Build
 
-Install globally (optional, requires admin privileges):
+1. Create a build directory and enter it:
 
-```bash
-sudo make install
-```
+   ```bash
+   $ mkdir build
+   $ cd build
+   ```
 
-#### Integrating GoogleTest into Your Existing CMake Project
+2. Generate build files with GoogleMock included (default):
 
-##### Option A: Use Installed GoogleTest Libraries
+   ```bash
+   $ cmake ..
+   ```
 
-Once installed, add this to your `CMakeLists.txt` to find GoogleTest:
+   To build only GoogleTest (excluding GoogleMock), run:
 
-```cmake
-find_package(GTest CONFIG REQUIRED)
+   ```bash
+   $ cmake .. -DBUILD_GMOCK=OFF
+   ```
 
-add_executable(your_test test.cpp)
-target_link_libraries(your_test GTest::gtest_main)
-add_test(NAME your_test COMMAND your_test)
-```
+3. Build the libraries:
 
-This approach requires GoogleTest to be installed on your system.
+   ```bash
+   $ make
+   ```
 
-##### Option B: Add GoogleTest as a Subdirectory
+4. Optionally, install GoogleTest and GoogleMock onto your system (requires admin rights):
 
-Include GoogleTest directly in your build to avoid dependency mismatch or version drift:
+   ```bash
+   $ sudo make install
+   ```
 
-```cmake
-add_subdirectory(path/to/googletest)
+##### Notes:
+- On Windows, CMake generates Visual Studio projects; build using Visual Studio IDE.
+- On macOS, a Xcode project will be generated similarly.
+- GoogleTest requires C++17 — ensure your compiler and project enforce this.
 
-add_executable(your_test test.cpp)
-target_link_libraries(your_test gtest_main)
-add_test(NAME your_test COMMAND your_test)
-```
+#### 3.2.2 Integrate into Existing CMake Project
 
-This ensures consistent compiler flags and debug symbols.
+For seamless integration into your own project, consider one of these approaches:
 
-##### Option C: FetchContent for Automatic Download
+- **Find installed GoogleTest:** Use `find_package(GTest CONFIG REQUIRED)` in your `CMakeLists.txt`.
+- **Add GoogleTest as Subdirectory:** Download or add GoogleTest as a git submodule and include with:
 
-Use CMake's FetchContent to download at configure time:
+  ```cmake
+  add_subdirectory(path/to/googletest)
+  target_link_libraries(your_target GTest::gtest GTest::gtest_main)
+  ```
 
-```cmake
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
-)
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE) # For Visual Studio runtime compatibility
-FetchContent_MakeAvailable(googletest)
+- **FetchContent for automatic download:**
 
-add_executable(your_test test.cpp)
-target_link_libraries(your_test gtest_main)
-add_test(NAME your_test COMMAND your_test)
-```
+  ```cmake
+  include(FetchContent)
+  FetchContent_Declare(
+    googletest
+    URL https://github.com/google/googletest/archive/refs/tags/v1.17.0.zip
+  )
+  FetchContent_MakeAvailable(googletest)
+
+  add_executable(your_test your_test.cpp)
+  target_link_libraries(your_test gtest_main gmock_main)
+  add_test(NAME your_test COMMAND your_test)
+  ```
+
+This approach ensures consistent compiler flags and simplifies dependency management.
 
 ---
 
-### 3. Building with Bazel
+## 4. Setting Up GoogleMock
 
-GoogleTest and GoogleMock include Bazel build configurations enabling seamless integration.
+Since GoogleMock depends on GoogleTest, it is included automatically if you build GoogleTest with GoogleMock enabled (the default).
 
-- Add the GoogleTest repository as a workspace dependency.
-- Declare `@com_google_googletest` in your `WORKSPACE` file.
-- Reference targets like `@com_google_googletest//:gtest` or `@com_google_googletest//:gmock` in your Bazel `BUILD` files.
+To use GoogleMock, include its headers in your test files:
 
-Example test target in Bazel:
-
-```bazel
-cc_test(
-    name = "your_test",
-    srcs = ["your_test.cpp"],
-    deps = ["@com_google_googletest//:gtest_main"],
-)
+```cpp
+#include "gmock/gmock.h"
 ```
 
-This will compile and link GoogleTest automatically.
+### 4.1 Linking with GoogleMock
 
----
+Link your tests against `gmock` or `gmock_main`:
 
-### 4. Linking GoogleMock
+- `gmock` provides the mocking features without a main function.
+- `gmock_main` includes a `main()` to drive your test executable.
 
-GoogleMock builds on top of GoogleTest and requires similar setup steps.
-
-For CMake, build GoogleMock alongside GoogleTest by default, or include the `gmock` and `gmock_main` libraries explicitly:
+Example linking with CMake:
 
 ```cmake
 target_link_libraries(your_test gmock_main)
 ```
 
-For Bazel, link your tests with `@com_google_googletest//:gmock_main`.
+### 4.2 Init Function
+
+GoogleMock requires initialization via `InitGoogleMock()`:
+
+```cpp
+int main(int argc, char** argv) {
+  testing::InitGoogleMock(&argc, argv);
+  return RUN_ALL_TESTS();
+}
+```
+
+If using `gmock_main`, this is provided for you.
 
 ---
 
-### 5. Using the Provided Main Functions
+## 5. Using Bazel or Other Build Systems
 
-Both GoogleTest and GoogleMock come with built-in `main()` implementations (`gtest_main` and `gmock_main` respectively) that handle initialization and running of tests.
+GoogleTest and GoogleMock can be integrated with alternative build systems like Bazel.
 
-- Link against `gtest_main` or `gmock_main` to avoid writing your own `main`.
+### 5.1 Bazel Setup
 
-- If you require custom test runner behavior (e.g., custom flags, setup), you can define your own `main()` as shown below:
+Declare `@com_google_googletest` dependency in your `WORKSPACE`:
 
-```c++
-#include <gtest/gtest.h>
+```python
+http_archive(
+    name = "com_google_googletest",
+    urls = ["https://github.com/google/googletest/archive/release-1.17.0.zip"],
+    strip_prefix = "googletest-release-1.17.0",
+)
+```
+
+Then in your `BUILD` files, depend on `@com_google_googletest//:gtest_main` or `@com_google_googletest//:gmock_main`.
+
+Refer to Bazel official documentation for detailed integration.
+
+---
+
+## 6. Verifying Your Installation
+
+To ensure GoogleTest and GoogleMock are installed and working correctly:
+
+### 6.1 Build and Run Sample Tests
+
+Create a sample test file, for example `sample_test.cpp`:
+
+```cpp
+#include "gtest/gtest.h"
+
+TEST(SampleTest, SimpleAssert) {
+  EXPECT_EQ(1 + 1, 2);
+}
 
 int main(int argc, char** argv) {
   testing::InitGoogleTest(&argc, argv);
@@ -190,100 +200,134 @@ int main(int argc, char** argv) {
 }
 ```
 
-OR for GoogleMock:
+Build this using your build system linking to `gtest_main`:
 
-```c++
-#include <gmock/gmock.h>
-
-int main(int argc, char** argv) {
-  testing::InitGoogleMock(&argc, argv);
-  return RUN_ALL_TESTS();
-}
+```bash
+# Example CMake command
+cmake ..
+make
+./sample_test
 ```
 
-Use these only if you need to customize before running tests.
+You should see output indicating the tests ran successfully.
+
+### 6.2 Running GoogleMock Tests
+
+Use similar steps for GoogleMock, adding mock definitions and linking to `gmock_main`. Verify the test runs without errors.
 
 ---
 
-## Examples
+## 7. Troubleshooting Tips
 
-### Minimal CMakeLists.txt for Testing with GoogleTest and GoogleMock
+<AccordionGroup title="Common Issues and Solutions">
+<Accordion title="Runtime Library Mismatch on Windows">
+If you encounter linker errors related to runtime libraries such as `MTd_StaticDebug` vs `MDd_DynamicDebug`, enable the option `gtest_force_shared_crt` by passing:
+
+```cmake
+-Dgtest_force_shared_crt=ON
+```
+
+This aligns GoogleTest with the shared runtime used by your project.
+</Accordion>
+<Accordion title="Missing pthread on Unix">
+Ensure pthread support is available and linked by your compiler; for custom build scripts, add `-pthread` flags.
+
+GoogleTest detects pthread automatically when using CMake.
+</Accordion>
+<Accordion title="C++17 Support Errors">
+GoogleTest requires C++17. Set your project's C++ standard explicitly:
+
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+```
+
+</Accordion>
+<Accordion title="GoogleMock Macro Conflicts">
+If GoogleMock macros conflict with other libraries, disable macro definition with compiler flags like:
+
+```bash
+-DGTEST_DONT_DEFINE_TEST=1
+```
+
+and use fully qualified macros such as `GTEST_TEST` instead of `TEST`.
+</Accordion>
+</AccordionGroup>
+
+---
+
+## 8. Best Practices and Recommendations
+
+- Build GoogleTest and your project with consistent compiler and linker settings.
+- Prefer integrating GoogleTest as a subdirectory or using FetchContent in CMake for simplified dependency management.
+- Keep GoogleMock updated regularly to leverage improvements and fixes.
+- Use `gmock_main` library for simplified test executable setup when you want the default main function.
+- Enable verbose flag `--gmock_verbose=info` at runtime to diagnose mocking issues.
+
+---
+
+## 9. Next Steps
+
+After you have successfully installed and verified GoogleTest and GoogleMock:
+
+- Explore the [Writing Your First Test](https://yourdocs.com/guides/getting-started/writing-your-first-test) guide to create meaningful tests.
+- Learn [Mocking Basics with GoogleMock](https://yourdocs.com/guides/getting-started/mocking-basics) for advanced test design.
+- Consult the troubleshooting guides if you encounter issues:
+  - [Troubleshooting Setup Issues](https://yourdocs.com/getting-started/troubleshooting-faq/troubleshooting-setup-issues)
+  - [Common Errors and How to Fix Them](https://yourdocs.com/getting-started/troubleshooting-faq/common-errors-and-solutions)
+
+---
+
+## Appendix: Example CMakeLists.txt For GoogleMock
 
 ```cmake
 cmake_minimum_required(VERSION 3.14)
-project(MyTests LANGUAGES CXX)
+project(MyTestProject)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
+# Enable FetchContent module
 include(FetchContent)
+
+# Declare and fetch GoogleTest (includes GoogleMock)
 FetchContent_Declare(
   googletest
-  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
+  URL https://github.com/google/googletest/archive/refs/tags/v1.17.0.zip
 )
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
 FetchContent_MakeAvailable(googletest)
 
-add_executable(my_test my_test.cpp)
-target_link_libraries(my_test gmock_main)
-add_test(NAME my_test COMMAND my_test)
+# Declare your test executable
+add_executable(my_tests test/sample_test.cpp)
+
+# Link with GoogleMock main library
+target_link_libraries(my_tests gmock_main)
+
+# C++17 standard enforcement
+set_target_properties(my_tests PROPERTIES
+  CXX_STANDARD 17
+  CXX_STANDARD_REQUIRED YES
+)
+
+# Add the test to CMake testing targets
+enable_testing()
+add_test(NAME MyTest COMMAND my_tests)
 ```
 
-### Typical main() Function (If Not Using gtest_main/gmock_main)
-
-```c++
-#include <gtest/gtest.h>
-
-int main(int argc, char** argv) {
-  testing::InitGoogleTest(&argc, argv);
-  return RUN_ALL_TESTS();
-}
-```
-
-or for GoogleMock:
-
-```c++
-#include <gmock/gmock.h>
-
-int main(int argc, char** argv) {
-  testing::InitGoogleMock(&argc, argv);
-  return RUN_ALL_TESTS();
-}
-```
+This example will automatically download GoogleTest and GoogleMock on configure, build your tests, and integrate them with CTest.
 
 ---
 
-## Troubleshooting & Tips
-
-- **Build Fails Due to Runtime Library Mismatch (Visual Studio):**
-  Enable `gtest_force_shared_crt` in CMake to link GoogleTest’s runtime dynamically if your project uses dynamic CRT.
-
-- **C++ Standard Errors:**
-  Ensure your project uses at least C++17 by setting `CMAKE_CXX_STANDARD 17`.
-
-- **Thread Safety Warnings:**
-  GoogleTest detects pthreads automatically; define `-DGTEST_HAS_PTHREAD=1` or `=0` explicitly if detection fails.
-
-- **Macro Name Collisions:**
-  Use compiler flags like `-DGTEST_DONT_DEFINE_TEST=1` to avoid macro conflicts and use `GTEST_TEST` instead.
-
-- **GoogleMock Flags Not Recognized:**
-  Call `testing::InitGoogleMock(&argc, argv)` instead of `testing::InitGoogleTest()` in your main function.
-
-- **Tests Not Running / Not Found:**
-  Confirm that tests are linked into the final executable and `RUN_ALL_TESTS()` is called exactly once.
-
-- **Ensure GoogleMock Is Built:**
-  If using CMake, verify `BUILD_GMOCK` is ON (default). Otherwise, GoogleMock libraries won't be built.
-
----
-
-## Next Steps & Related Topics
-
-- Proceed to [Writing Your First Unit Tests](/guides/getting-started/writing-your-first-tests) after successful setup.
-- Explore [Integrating with Your Build System](/getting-started/setup-prerequisites-installation/integration-third-party-tools) to vendor or externally manage dependencies.
-- Review [Mocking Your First Functions](/guides/getting-started/mocking-your-first-functions) to learn about using GoogleMock.
-- For details on flags and advanced configurations, consult the official GoogleTest CMake README and Bazel integration files.
+Your development environment is now prepared to harness the full power of GoogleTest and GoogleMock for effective unit and mock testing in C++.
 
 
 ---
+
+### References
+
+- [GoogleTest GitHub Repository](https://github.com/google/googletest)
+- [GoogleMock Official Documentation](https://google.github.io/googletest/gmock_for_dummies.html)
+- [CMake Official Site](https://cmake.org/)
+- [Bazel Official Documentation](https://docs.bazel.build/)
+
+---
+
+*This document is part of the GoogleTest and GoogleMock comprehensive documentation suite. For foundational concepts, installation variations, and advanced usage, please refer to the respective linked guides.*
